testData/commands/errors/parent/index.ts
import { defineCommand } from "../../../../definitions";

export default defineCommand({
    key: "parent",
    ownerOnly: true,
});
